<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.cart.CartFragment"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/linear_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_marginVertical="4dp"
            android:layout_marginStart="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/state"
                android:textStyle="bold"
                android:layout_marginStart="4dp"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

            <TextView
                android:id="@+id/order_state"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/processing"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />


        </LinearLayout>
        <LinearLayout
            android:id="@+id/linear_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_marginStart="8dp">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/date"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/order_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />


        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/order_detail_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_order_cart_layout"
            tools:itemCount="3"/>
        <Space
            android:layout_width="match_parent"
            android:layout_height="16dp"/>
        <TextView
            android:id="@+id/total_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/Total_price"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            android:textStyle="bold"
            android:layout_gravity="end"
            />
        <Space
            android:layout_width="match_parent"
            android:layout_height="8dp"/>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/choose_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@drawable/grey_border"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingHorizontal="45dp"
                android:paddingVertical="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ahipping_to"
                        android:textColor="@color/black"
                        android:textSize="18dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/name"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/name"
                        android:textSize="16dp"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/street"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/street"
                        android:textSize="16dp"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/plz"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/plz"
                            android:textSize="16dp"
                            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2" />

                        <TextView
                            android:id="@+id/city"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginBottom="4dp"
                            android:textSize="16dp"
                            android:text="@string/city"
                            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/country"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16dp"
                        android:text="@string/country"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2" />
                </LinearLayout>


            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</ScrollView>