<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="?attr/selectableItemBackground">

    <ImageView
        android:id="@+id/product_image"
        android:layout_marginTop="8dp"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/image_placeholder_foreground" />

    <TextView
        android:id="@+id/product_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/product_name"
        android:layout_gravity="center"
        style="@style/TextAppearance.MaterialComponents.Body1"/>

    <TextView
        android:id="@+id/product_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/product_price"
        android:layout_gravity="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"/>

    <TextView
        android:id="@+id/product_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/product_status"
        android:layout_gravity="center"
        android:textColor="@color/btn_end_color"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"/>

    <ImageButton
        android:id="@+id/add_to_cart_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:paddingVertical="10dp"
        android:paddingHorizontal="100dp"
        android:background="@drawable/btn_background"
        app:srcCompat="@drawable/ic_add_shopping_cart"
        android:foreground="?attr/selectableItemBackground"/>


</LinearLayout>